fixed row gaps and margins in Home page

--- a/app/home/home.module.scss
+++ b/app/home/home.module.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  row-gap: 120px;
+  margin-bottom: 120px;
 
   &__header {
     display: flex;
@@ -56,7 +58,7 @@
     align-items: center;
     text-align: center;
     row-gap: 24px;
-    padding: 5rem 1.5rem;
+    padding: 0 1.5rem;
   }
 
   &__principles {
@@ -64,7 +66,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding: 4rem 1rem;
+    padding: 0 1rem;
     row-gap: 80px;
   }
 
